tests/invalidTest/other/array_null.q
# EXPECT the pointer has not been init

def void errorDef(){
    sint8* a
    a[1] = 0
}